Update to: index.html file - Altered "About me" and "Header" sections/

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Christopher Bucsa's Portfolio</h1>
+        <h1>Portfolio</h1>
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Welcome to my portfolio! I am a developer with a passion for creating amazing projects.</p>
+        <p>
+            Hello, my name is Chris and I'm a Software Engineer working for Revature. My background
+           is in Data Science; in which I have a B.S. from George Mason University. This degree
+           couples nicely with back-end development, giving me a strong foundation in problem-solving,
+           data management, and logical thinking. I am eager to continue growing as a developer, building
+           reliable systems, and contributing to impactful projects.
+        </p>
     </section>
     <section>
         <h2>Projects</h2>
