Update to: index.html - Adjusted format in "About Me" section

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Portfolio</h1>
+        <h1>My Portfolio</h1>
     </header>
     <section>
         <h2>About Me</h2>
         <p>
-            Hello, my name is Chris and I'm a Software Engineer working for Revature. My background
-           is in Data Science; in which I have a B.S. from George Mason University. This degree
-           couples nicely with back-end development, giving me a strong foundation in problem-solving,
+           Hello, my name is Chris and I'm a Software Engineer working for Revature. My background
+           is in Data Science; in which I have a B.S. from George Mason University. This degree has
+           coupled nicely with back-end development, giving me a strong foundation in problem-solving,
            data management, and logical thinking. I am eager to continue growing as a developer, building
            reliable systems, and contributing to impactful projects.
         </p>
