Update to: index.html -
Added a project to the file, as well as a description.  Changed a couple headers too.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
         </p>
     </section>
     <section>
-        <h2>Projects</h2>
+        <h2>Back-end Development Projects (Java)</h2>
         <ul>
-            <li><a href="#">Project 1</a></li>
+            <li>
+                <a href="https://github.com/ChristopherBucsa/ChristopherBucsa-pep-project">Social Media Blog API</a>
+                <p>In this project, I developed the backend of a social media application, focusing on managing
+                   user accounts and messages. I gained hands-on experience with user authentication (logins and registrations)
+                   and implemented CRUD operations for managing messages; including creation, updates, and deletions. I also worked
+                   on designing a backend that efficiently retrieves messages, whether all messages or just those from a particular
+                   user. Primary technologies utilized: Java, Javalin, JDBC.
+                <p>
+            </li>
             <li><a href="#">Project 2</a></li>
             <li><a href="#">Project 3</a></li>
         </ul>
