Update to "index.html" - Added a project and description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>Portfolio - Chris Bucsa</h1>
     </header>
     <section>
         <h2>About Me</h2>
@@ -21,19 +21,27 @@
         </p>
     </section>
     <section>
-        <h2>Back-end Development Projects (Java)</h2>
+        <h2>Back-end Projects</h2>
         <ul>
             <li>
                 <a href="https://github.com/ChristopherBucsa/ChristopherBucsa-pep-project">Social Media Blog API</a>
-                <p>In this project, I developed the backend of a social media application, focusing on managing
-                   user accounts and messages. I gained hands-on experience with user authentication (logins and registrations)
-                   and implemented CRUD operations for managing messages; including creation, updates, and deletions. I also worked
-                   on designing a backend that efficiently retrieves messages, whether all messages or just those from a particular
-                   user. Primary technologies utilized: Java, Javalin, JDBC.
+                <p>
+                    Primary technologies utilized: Java, Javalin, JDBC
+                    This project is a backend implementation for a hypothetical social media app, handling user
+                    authentication and leveraging CRUD operations for message management and efficient data
+                    retrieval. 
                 <p>
             </li>
-            <li><a href="#">Project 2</a></li>
-            <li><a href="#">Project 3</a></li>
+            
+            <li>
+                <a href="https://github.com/ChristopherBucsa/ChristopherBucsa-pep-spring-project">Spring Social Media Blog API</a>
+                <p>
+                    Primary technologies utilized: Spring Boot, Spring Data, Spring Framework
+                    This iteration of the social media app leverages the Spring framework to build a scalable backend. It
+                    implements user authentication, RESTful APIs for account and message management, and efficient data 
+                    retrieval using Spring Web, ensuring maintainability and security.
+                </p>
+            </li>
         </ul>
     </section>
     <footer>
