--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             
             <li>
                 <a href="https://github.com/ChristopherBucsa/ChristopherBucsa-pep-spring-project">Spring Social Media Blog API</a>
-                <p>
-                    Primary technologies utilized: Spring Boot, Spring Data, Spring Framework
-                    This iteration of the social media app leverages the Spring framework to build a scalable backend. It
-                    implements user authentication, RESTful APIs for account and message management, and efficient data 
-                    retrieval using Spring Web, ensuring maintainability and security.
-                </p>
+                <p>Primary technologies utilized: Spring Boot, Spring Data, Spring Framework<p>
+                    <p>
+                        This iteration of the social media app leverages the Spring framework to build a scalable backend. It
+                        implements user authentication, RESTful APIs for account and message management, and efficient data 
+                        retrieval using Spring Web, ensuring maintainability and security.
+                   </p>
             </li>
         </ul>
     </section>
