--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <ul>
             <li>
                 <a href="https://github.com/ChristopherBucsa/ChristopherBucsa-pep-project">Social Media Blog API</a>
-                <p>
-                    Primary technologies utilized: Java, Javalin, JDBC
-                    This project is a backend implementation for a hypothetical social media app, handling user
-                    authentication and leveraging CRUD operations for message management and efficient data
-                    retrieval. 
-                <p>
+                <p>Primary technologies utilized: Java, Javalin, JDBC<p>
+                    <p>
+                        This project is a backend implementation for a hypothetical social media app, handling user
+                        authentication and leveraging CRUD operations for message management and efficient data
+                        retrieval. 
+                    <p>
             </li>
             
             <li>
