--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <section>
         <h2>About Me</h2>
         <p>
-           Hello, my name is Chris and I'm a Software Engineer working for Revature. My background
-           is in Data Science; in which I have a B.S. from George Mason University. This degree has
-           coupled nicely with back-end development, giving me a strong foundation in problem-solving,
-           data management, and logical thinking. I am eager to continue growing as a developer, building
-           reliable systems, and contributing to impactful projects.
+           I'm a software developer with a background in data science, interested in both frontend and backend
+           development. I have experience building RESTful APIs, managing data interactions, and working in Java, 
+           Spring Boot, and JDBC. My goal is to work on scalable high-performance applications. I'm continuously learning
+           and improving to advance my career in software development.
         </p>
     </section>
     <section>
